[project]
authors = [{name = "Mark Servilla", email = "mark.servilla@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "dataone-common>=3.5.2,<4",
    "dataone-libclient>=3.5.2,<4",
    "pyxb-x>=1.2.6.3,<2"
]
name = "gmn_adapter"
dynamic = ["version"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
gmn_adapter = { path = ".", editable = true }
iam_lib = { git = "https://github.com/PASTAplus/iam-lib.git" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.2,<3.15"
requests = ">=2.32.5,<3"
daiquiri = ">=3.0.0,<4"
sqlalchemy = ">=2.0.45,<3"
sqlite = ">=3.51.1,<4"
pixi-pycharm = ">=0.0.10,<0.0.11"
pip = ">=25.3,<26"
psycopg2-binary = ">=2.9.10,<3"
click = ">=8.3.1,<9"
pydantic = ">=2.12.5,<3"
pydantic-core = ">=2.41.5,<3"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
ruff = "*"
hatchling = "*"

[tool.pixi.environments]
production = { solve-group = "prod" }
default = { features = ["dev"], solve-group = "prod" }

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "hatchling",
]

[project.scripts]
adapter = "gmn_adapter.gmn.cli.adapter:adapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/gmn_adapter/VERSION.txt"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.wheel]
packages = ["src/gmn_adapter"]

[tool.hatch.build.targets.sdist]
only-include = ["src/gmn_adapter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
